# emu

./: .gitmodules  Cargo.toml  README.md  default.nix  flake.nix  sm83.sla  tree.txt  tree.txt.old
cpu/: Cargo.toml  Makefile
cpu/src/: api.rs  cpu.rs  lib.rs
emulator/: Cargo.toml
emulator/src/: cartridge.rs  cpu.rs  display.rs  error.rs  main.rs  memory.rs
sdl/: Cargo.toml
sdl/src/: main.rs
src/: codegen.rs  main.rs  pcode.rs  pcodeop.rs  slaformat.rs  slamodel.rs  slaparser.rs  slareader.rs
translator/: .gitignore  Cargo.toml  Makefile  build.rs
translator/sleigh/: Makefile
translator/src/: asm.rs  decode.rs  fallback.rs  gbit.rs  gbloader.rs  lib.rs  loader.rs  main.rs  pcode.rs  sleigh.cc  sleigh.rs
translator/zlib/: Makefile
