cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "sleighthing"
version = "0.1.0"
edition = "2021"

[dependencies]
miniz_oxide = { version = "0.8.3", features = ["std"] }
proc-macro2 = "1.0.93"
quote = "1.0.38"

# Faster builds

[profile.dev]
codegen-backend = "cranelift"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]